Partial_14Dec2021/force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>APPL Target</label>
    <nameField>
        <displayFormat>TGT-{YYYY}{MM}-{0000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>