Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Activation_Of_Direct_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Activation_Of_Direct_Dealer__c</fullName>
    <inlineHelpText>To Track the Date, when the Status is changed from Prospect to Existing Customer.</inlineHelpText>
    <label>Activation Of Direct Dealer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>