Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Activation_Of_Inactive_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Activation_Of_Inactive_Distributor__c</fullName>
    <label>Activation Of Inactive Distributor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>