Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Actual_Visits_E_Visit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visits_E_Visit__c</fullName>
    <label>Actual Visits-E Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>