Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Actual_Visits_Physical_EC__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visits_Physical_EC__c</fullName>
    <label>Actual Visits - Physical(EC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>