Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Actuval_Exhibition_Construction_Fairs__c.field-meta.xml
<CustomField>
    <fullName>Actuval_Exhibition_Construction_Fairs__c</fullName>
    <label>Actuval Exhibition / Construction Fairs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>