Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Acvd_per_of_productive_visits_with_order__c.field-meta.xml
<CustomField>
    <fullName>Acvd_per_of_productive_visits_with_order__c</fullName>
    <formula>visit_with_new_order_booking__c  /Productive_visits_with_order_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acvd per of productive visits with order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>