Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Adopted_Dealer_Score__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Dealer_Score__c</fullName>
    <formula>Adopted_Dealer_Weightage__c  *  (  Adopted_Dealer_ACHVD__c  / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopted Dealer Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>