Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Adopted_Dealer_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Dealer_Weightage__c</fullName>
    <label>Adopted Dealer Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>