Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Adopted_Plumber_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Plumber_ACHVD__c</fullName>
    <formula>Adopted_Plumber_Actual_Count__c  /  Adopted_Plumber_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopted Plumber ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>