Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Adopted_Plumber_Score__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Plumber_Score__c</fullName>
    <formula>Adopted_Plumber_We__c  *  (  Adopted_Plumber_ACHVD__c  / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adopted Plumber Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>