Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Adopted_Plumber_We__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Plumber_We__c</fullName>
    <label>Adopted Plumber Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>