Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Approved Comments for Tour plan</description>
    <label>Approved Comments</label>
    <type>TextArea</type>
</CustomField>