Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Approval_TourPlan_Link__c.field-meta.xml
<CustomField>
    <fullName>Approval_TourPlan_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://na1.salesforce.com/apex/APPL_TOURPLAN_CALENDAR_APPROVAL?id=&apos;+ Id, &apos;Click Here&apos;, &apos;_self&apos;)</formula>
    <label>Approval TourPlan Link</label>
    <type>Text</type>
</CustomField>