Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Approvals_Orders_With_Top_Builders__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Orders_With_Top_Builders__c</fullName>
    <label>Approvals &amp; Orders With Top Builders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>