Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Architects_Engineers_Consultants_Actual__c.field-meta.xml
<CustomField>
    <fullName>Architects_Engineers_Consultants_Actual__c</fullName>
    <label>Architects/Engineers/Consultant Factory</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Architects / Engineers / Consultants Factory Visit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>