Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Architects_Engineers_Consultants_Factory__c.field-meta.xml
<CustomField>
    <fullName>Architects_Engineers_Consultants_Factory__c</fullName>
    <label>Architects/Engineers/Consultants Factory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>