Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Average_Visits_In_a_day__c.field-meta.xml
<CustomField>
    <fullName>Average_Visits_In_a_day__c</fullName>
    <formula>(No_of_visits_total_visits__c+ Distributor_Visits_Actual__c + Influencer_visit_actual_column__c )/ no_of_days_in_a_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Visits In a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>