Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Bombarding_Column_Score__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Column_Score__c</fullName>
    <formula>Bombarding_Column_Weightage__c * (   Bombarding_Column_ACHVD__c  / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bombarding Column Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>