Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Bombarding_Column_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Column_Weightage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bombarding Column Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>