Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Bombarding_Plumber_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Plumber_ACHVD__c</fullName>
    <formula>Bombarding_Plumber_Actual__c / Bombarding_Target_Plumbing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bombarding Plumber ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>