Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Bombarding_Plumber_Score__c.field-meta.xml
<CustomField>
    <fullName>Bombarding_Plumber_Score__c</fullName>
    <formula>Bombarding_Plumber_Weightage__c * ( Bombarding_Plumber_ACHVD__c / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bombarding Plumber Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>