Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Borewell_Operators_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Borewell_Operators_Weightage__c</fullName>
    <label>Borewell Operators Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>