Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Builders_Meet__c.field-meta.xml
<CustomField>
    <fullName>Builders_Meet__c</fullName>
    <label>Builders Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>