Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Builders_Meets_Actual__c.field-meta.xml
<CustomField>
    <fullName>Builders_Meets_Actual__c</fullName>
    <label>Builders Meets (Actual)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Builders Meets</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>