Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Column_Dealer_Meet__c.field-meta.xml
<CustomField>
    <fullName>Column_Dealer_Meet__c</fullName>
    <label>Column Dealer / Distributor Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>