Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Column_Dealers_Salesman_Meet__c.field-meta.xml
<CustomField>
    <fullName>Column_Dealers_Salesman_Meet__c</fullName>
    <label>Column Dealers Salesman Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>