Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Column_Distributors_Dealers_Mechanic_Fac__c.field-meta.xml
<CustomField>
    <fullName>Column_Distributors_Dealers_Mechanic_Fac__c</fullName>
    <label>Column Distributors/Dealers/Mechanic Fac</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>