Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Column_DSM_Meet_Training__c.field-meta.xml
<CustomField>
    <fullName>Column_DSM_Meet_Training__c</fullName>
    <label>Column DSM Meet/Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>