Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Consultants_Architects__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Architects__c</fullName>
    <label>Consultants/Architects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>