Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Consultants_Builders_Events__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Builders_Events__c</fullName>
    <label>Consultants/Builders Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>