Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Consultants_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Consultants_Factory_Visit__c</fullName>
    <label>Consultants Factory Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>