Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_ACHVD_FARMERS_PANCHAYAT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_ACHVD_FARMERS_PANCHAYAT__c</fullName>
    <formula>if(Contact_Visits_Target_FARMERS_PANCHAYAT__c &gt; 0 &amp;&amp; Contact_Visits_Actual_FARMERS_PANCHAYAT__c &gt; 0,  Contact_Visits_Actual_FARMERS_PANCHAYAT__c / Contact_Visits_Target_FARMERS_PANCHAYAT__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Visit %ACHVD (FARMERS/PANCHAYAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>