Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_ACHVD_MECHANICS_WINDERS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_ACHVD_MECHANICS_WINDERS__c</fullName>
    <formula>if(Contact_Visit_Actual_MECHANICS_WINDERS__c  &gt; 0 &amp;&amp; Contact_Visit_Target_MECHANICS_WINDERS__c &gt; 0, Contact_Visit_Actual_MECHANICS_WINDERS__c /  Contact_Visit_Target_MECHANICS_WINDERS__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Visit %ACHVD (MECHANICS/WINDERS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>