Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_visit_Actual_Borer__c.field-meta.xml
<CustomField>
    <fullName>Contact_visit_Actual_Borer__c</fullName>
    <description>roll up from ap_site_visit where party type is Borer</description>
    <label>Contact_visit_Actual_Borer</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Borer</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>