Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_Actual_MECHANICS_WINDERS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_Actual_MECHANICS_WINDERS__c</fullName>
    <label>Contact Visit Actual (MECHANICS/WINDERS)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Mechanic</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>