Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_Score_BOREWELL_OPERATOR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_Score_BOREWELL_OPERATOR__c</fullName>
    <formula>Contact_Visit_Weighta_BOREWELL_OPERATOR__c * (Contact_Visit_ACHVD_BOREWELL_OPERATOR__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Visit Score(BOREWELL OPERATOR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>