Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_Score_FARMERS_PANCHAYAT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_Score_FARMERS_PANCHAYAT__c</fullName>
    <formula>Contact_Visit_Weighta_FARMERS_PANCHAYAT__c * (Contact_Visit_ACHVD_FARMERS_PANCHAYAT__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Visit Score(FARMERS/PANCHAYAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>