Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_Target_MECHANICS_WINDERS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_Target_MECHANICS_WINDERS__c</fullName>
    <label>Contact Visit Target(MECHANICS/WINDERS)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>