Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visit_Weighta_BOREWELL_OPERATOR__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visit_Weighta_BOREWELL_OPERATOR__c</fullName>
    <label>Contact Visit Weighta(BOREWELL OPERATOR)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>