Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visits_Actual_FARMERS_PANCHAYAT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visits_Actual_FARMERS_PANCHAYAT__c</fullName>
    <label>Contact Visits Actual(FARMERS/PANCHAYAT)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Farmer, Panchayat Head</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>