Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contact_Visits_Target_FARMERS_PANCHAYAT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Visits_Target_FARMERS_PANCHAYAT__c</fullName>
    <label>Contact Visits Target(FARMERS/PANCHAYAT)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>