Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/CONTACTS_VISIT__c.field-meta.xml
<CustomField>
    <fullName>CONTACTS_VISIT__c</fullName>
    <label>Contacts Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>