Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contacts_visit_Plumbers_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Contacts_visit_Plumbers_ACHVD__c</fullName>
    <formula>Contacts_visit_Plumbers_etc__c /  Contacts_visit_Target_Plumbers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts visit  (Plumbers) % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>