Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contacts_visit_Plumbers_etc__c.field-meta.xml
<CustomField>
    <fullName>Contacts_visit_Plumbers_etc__c</fullName>
    <label>Contacts visit Actual ( Plumbers)​</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>notEqual</operation>
        <value>Dealer, Direct Dealer, Distributor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>