Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Contacts_visit_Score_Plumbers__c.field-meta.xml
<CustomField>
    <fullName>Contacts_visit_Score_Plumbers__c</fullName>
    <formula>Contacts_visit_Weightage_Plumbers__c *  (Contacts_visit_Plumbers_ACHVD__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts visit Score (Plumbers)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>